# counterpy

./: .gitignore  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  image.eps  index.rst
src/counterpy/: counterpy.py
src/counterpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
