[project]
name = "counterpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "playsound>=1.3.0",
    "pygobject>=3.50.0",
    "scipy>=1.14.1",
]

[project.scripts]
counterpy = "counterpy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
